# Aerodelay-Analytics

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
dashboard/: app.py
src/flight_delay_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/flight_pipeline/: logging_config.py
src/flight_pipeline/config/: settings.py
src/flight_pipeline/db/: mongo.py
src/flight_pipeline/models/: clean.py
src/flight_pipeline/pipeline/: aggregate.py  clean.py  ingest.py
tests/: test_aggregation_outputs.py  test_cleaning_logic.py  test_schema_validation.py
