[project]
name = "flight-delay-pipeline"
version = "0.1.0"
description = "Distributed big data pipeline for US flight delay analytics using MongoDB"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0",
    "pymongo>=4.6",
    "pydantic>=2.5",
    "python-dateutil",
    "streamlit>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "mypy>=1.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
